2002-11-30  Herbert Thoma  <herbie@hthoma.de>

	* src/report/standard-reports/cash-flow.scm: Added new option
	for output formating, make the output "nicer"
 
2002-11-30  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/gnc-hbci-getbalance.c: More graceful
	fallback solution when returned balances are zero.

	* src/app-utils/gnc-ui-util.[hc]: Added
	gnc_locale_default_currency_nodefault function since
	locale_default_currency might return a non-locale related
	currency. Fix xaccSPrintAmount. Fixes #95404.

	* src/engine/iso-4217-currencies.scm ("rouble"): Fix mnemonic for
	Russian Rouble which is "RUR" instead of RUB.

	* src/business/business-gnome/business-gnome.scm,
	src/gnome-utils/gnc-mdi-utils.c,
	src/gnome-utils/gnc-menu-extensions.c,
	src/import-export/ofx/ofx-import.scm,
	src/import-export/qif-import/druid-qif-import.c: More i18n menu
	insertion fixes.

2002-11-30  Matthew Vanecek <mevanecek@yahoo.com>

	* Makefile.am: Added the GNC_CTAGS_FILE token, and added the
        ctags target.  Changed the TAGS target to etags, and
	GNC_TAGS_FILE to GNC_ETAGS_FILE.  Removed GNC_TAGS_FILE from the
	noinst_DATA variable.  This makes tag building a manual target.
	Run "make ctags" for Vi tags, or "make etags" for Emacs TAGS.

	* Makefile.TAGS:  Changed the TAGS target to etags, and added
	the ctags target.

	* configure.in:  Added the --enable-ctags option.

	* .cvsignore:  Added tags to .cvsignore.  tags is the file created
	by ctags.

02-11-29  David Hampton  <hampton@employees.org>

	* src/report/standard-reports/transaction.scm: Fix the grand
	totals in the transaction report when there is more than one type
	of currency/commodity to report. #89501

	* src/report/report-system/report.scm: Move the busy cursor logic
	so that it removes the busy cursor even after a report error.

	* src/report/locale-specific/us/taxtxf.scm: 
	* src/report/standard-reports/transaction.scm: Provide progress updates
	while creating reports. #94280
